--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <body>
      <h1>Anthony Khoury</h1>
+     <p>This is a Git Hub Tutorial</p>
+     <p>New commit</p>
+     <p>Newer commit</p>
 </body>
 
 </html>
